--- a/Presentation/Views/Shared/Partial/Js.cshtml
+++ b/Presentation/Views/Shared/Partial/Js.cshtml
@@ -1,7 +1,7 @@
-﻿<script src="@Url.Content("~/Assets/js/lib/jquery-1.4.4.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/MicrosoftAjax.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/MicrosoftMvcAjax.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/MicrosoftMvcValidation.js")" type="text/javascript"></script>
+﻿<script src="@Url.Content("~/Assets/js/lib/jquery-1.6.1.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 
 <script src="@Url.Content("~/Assets/js/lib/StringExtension.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/lib/NumericValue.js")" type="text/javascript"></script>
