[SITE] Ajusts on css and add of Ak
by [aripmav1896@gmail.com] in [2011-10-22 00:45:21 (-02:00)]

--- a/Presentation/Views/Season/Author/Episode.cshtml
+++ b/Presentation/Views/Season/Author/Episode.cshtml
@@ -36,12 +36,15 @@
         @Html.TextBoxFor(m => m.Story.Title)
     </p>
 
-   for (var p = 0; p < Model.Story.ParagraphTypeList.Count; p++)
-   {
-       Model.ParagraphCounter = p;
-        
+    <p>
+        Paragraphs last count: @Model.Story.ParagraphTypeList.Count
+    </p>
+
+    for (var p = 0; p < Model.Story.ParagraphTypeList.Count; p++)
+    {
+        Model.ParagraphCounter = p;
         @Html.Partial("Author/Paragraph")
-   }
+    }
 }
 
 @if (@Model.Next != null)
