[SITE] Save on ajax
by [aripmav1896@gmail.com] in [2011-10-23 00:00:40 (-02:00)]

--- a/Presentation/Assets/css/Author/screen_Form.css
+++ b/Presentation/Assets/css/Author/screen_Form.css
@@ -31,3 +31,25 @@
 	font-size: 150%;
 	border: none;
 }
+
+
+
+
+
+.yellowSave
+{
+	background: #220 url("/Assets/images/boxes/yellow_background.jpg") !important;
+	color: #FFF !important;
+}
+
+.greenSave
+{
+	background: #020 url("/Assets/images/boxes/green_background.jpg") !important;
+	color: #FFF !important;
+}
+
+.redSave
+{
+	background: #200 url("/Assets/images/boxes/red_background.jpg") !important;
+	color: #FFF !important;
+}
