--- a/Presentation/Views/Season/Author/Episode.cshtml
+++ b/Presentation/Views/Season/Author/Episode.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = String.Format("MEAK {0}{1} – {2}", Model.Story.Season, Model.Story, Model.Story.Title);
     Layout = "~/Views/Shared/_Layout.cshtml";
     var adderPage = Url.Action("Adder");
+    var ajaxOptions = new AjaxOptions { HttpMethod = "Post", OnBegin = "SaveBegin", OnSuccess = "SaveSuccess", OnFailure = "SaveFailure" };
 }
 
 <script type="text/javascript">var adderPage = '@adderPage';</script>
@@ -11,6 +12,7 @@
 <script src="@Url.Content("~/Assets/js/Author/Inputs.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Author/Suggestion.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Author/Adder.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/Author/SaveChangeColor.js")" type="text/javascript"></script>
 
 <script src="@Url.Content("~/Assets/js/Author/General.js")" type="text/javascript"></script>
 
@@ -26,7 +28,10 @@
 }
 
 
-@using (Html.BeginForm())
+
+
+
+@using (Ajax.BeginForm(ajaxOptions))
 {
     <button type="submit" class="darkback" id="save">Salvar</button>
     
