[SITE] Modified style of Teller Division
by [aripmav1896@gmail.com] in [2011-10-23 02:44:15 (-02:00)]

--- a/Presentation/Assets/css/Episode.css
+++ b/Presentation/Assets/css/Episode.css
@@ -56,7 +56,11 @@
 }
 
 .teller_Division {
+	border-bottom: 1px solid;
+	font-size: 120%;
+	font-weight: bold;
+	margin-bottom: 5px;
+	margin-top: 10px;
 	text-align: right;
 	text-transform: uppercase;
-	font-weight: bold;
 }
