[SITE] Border radius
by [handhara] in [2011-10-27 19:17:06 (-02:00)]

--- a/Presentation/Assets/css/screen_Menu.css
+++ b/Presentation/Assets/css/screen_Menu.css
@@ -10,9 +10,10 @@
 .menu .header
 {
 	padding: 2px;
+	border-radius: 0 0 10px 10px;
 }
 
-.menu .body
+.menu .body 
 {
     padding: 5px;
     margin: 0px 0px 20px 0px;
