--- a/Presentation/Views/Shared/Partial/Legend.cshtml
+++ b/Presentation/Views/Shared/Partial/Legend.cshtml
@@ -1,9 +1,9 @@
-﻿<div id="legend" onclick="AnimateLegend()">
+﻿<div id="legend" class="lightback" onclick="AnimateLegend()">
     <div class="header darkback">
         Legenda
     </div>
 
-    <div class="body lightback">
+    <div class="body">
         <span class="talk_Arrive">Chegada</span><br />
         <span class="talk_Frizz">Frisado</span><br />
         <span class="talk_Out">Longe</span><br />
