[SITE] Navigation between scenes before episodes
by [handhara] in [2011-11-04 19:16:17 (-02:00)]

--- a/Presentation/Views/Season/Author/Episode.cshtml
+++ b/Presentation/Views/Season/Author/Episode.cshtml
@@ -21,7 +21,7 @@
 @if (@Model.Prev != null)
 {
     <div class="navigation prevEp">
-        <a href="@Url.RouteUrl("Default", new { controller = "Season", season = Model.Prev.Season, action = "Episode", episode = Model.Prev.Episode })">
+        <a href="@Url.RouteUrl("Scene", new { controller = "Season", season = Model.Prev.Season, action = "Episode", episode = Model.Prev.Episode, scene = Model.Prev.Scene })">
             <img alt="@Model.Prev.Season@Model.Prev.Episode" src="@Url.Content(@"~/Assets/images/Prev.gif")" />
         </a>
     </div>
@@ -54,8 +54,9 @@
 
 @if (@Model.Next != null)
 {
+    
     <div class="navigation nextEp">
-        <a href="@Url.RouteUrl("Default", new { controller = "Season", season = Model.Next.Season, action = "Episode", episode = Model.Next.Episode })">
+        <a href="@Url.RouteUrl("Scene", new { controller = "Season", season = Model.Next.Season, action = "Episode", episode = Model.Next.Episode, scene = Model.Next.Scene })">
             <img alt="@Model.Next.Season@Model.Next.Episode" src="@Url.Content(@"~/Assets/images/next.gif")" />
         </a>
     </div>
