--- a/Presentation/Views/Season/Author/TellerPiece.cshtml
+++ b/Presentation/Views/Season/Author/TellerPiece.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Presentation.Models.SeasonEditEpisodeModel
 
-@{var piece = Model.Story.TellerList[Model.TellerCounter].Pieces[Model.PieceCounter];}
+@{var piece = Model.Story.SceneList[Model.SceneCounter].TellerList[Model.TellerCounter].Pieces[Model.PieceCounter];}
                     
 <span class="paragraphPiece" id="Teller@(Model.TellerCounter)_Piece@(Model.PieceCounter)">
     <span class="teller_@(piece.Style)">
-        @Html.TextBoxFor(m => m.Story.TellerList[Model.TellerCounter].Pieces[Model.PieceCounter].Style,
+        @Html.TextBoxFor(m => m.Story.SceneList[Model.SceneCounter].TellerList[Model.TellerCounter].Pieces[Model.PieceCounter].Style,
             new { 
                 @class = "lightback auxi", 
                 rel = ("tellerStyle" + Model.TellerCounter + "_piece" + Model.PieceCounter), 
@@ -14,13 +14,13 @@
                 tabIndex = Model.TabIndex++
             })
 
-        @Html.TextBoxFor(m => m.Story.TellerList[Model.TellerCounter].Pieces[Model.PieceCounter].Text,
+        @Html.TextBoxFor(m => m.Story.SceneList[Model.SceneCounter].TellerList[Model.TellerCounter].Pieces[Model.PieceCounter].Text,
             new {
                 @class = "text",
                 tabIndex = Model.TabIndex++
             })
 
-        <adder tabIndex="@(Model.TabIndex++)" class="adderPiece" type="Piece" subtype="Teller" paragraph="@(Model.ParagraphCounter)" teller="@(Model.TellerCounter)" piece="@(Model.PieceCounter)" onclick="AddInputItem(this)">+</adder>
+        <adder tabIndex="@(Model.TabIndex++)" class="adderPiece" scene="@Model.SceneCounter" type="Piece" subtype="Teller" paragraph="@Model.ParagraphCounter" teller="@Model.TellerCounter" piece="@Model.PieceCounter" onclick="AddInputItem(this)">+</adder>
     </span>
 
     <div class="suggestionBox" id="tellerStyle@(Model.TellerCounter)_piece@(Model.PieceCounter)"></div>
