[SITE] Button for Resize Text
by [handhara] in [2011-11-22 15:29:02 (-02:00)]

--- a/Presentation/Views/Shared/_Layout.cshtml
+++ b/Presentation/Views/Shared/_Layout.cshtml
@@ -28,6 +28,11 @@
         @Html.Partial("Partial/Menu")
     </div>
 
+    <div class="resizer">
+        <button class="sizeLess darkback">A &ndash; &ndash;</button>
+        <button class="sizeMore darkback">A + +</button>
+    </div>
+
     <div class="main lightback hidden">
         @RenderBody()
     </div>
