--- a/Presentation/Views/Shared/Partial/Js.cshtml
+++ b/Presentation/Views/Shared/Partial/Js.cshtml
@@ -18,5 +18,6 @@
 <script src="@Url.Content("~/Assets/js/Back.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Legend.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/SceneChanger.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/FontResizer.js")" type="text/javascript"></script>
 
 <script src="@Url.Content("~/Assets/js/General.js")" type="text/javascript"></script>
