--- a/Presentation/Views/Season/Author/TalkPiece.cshtml
+++ b/Presentation/Views/Season/Author/TalkPiece.cshtml
@@ -6,8 +6,8 @@
     <span class="talk_@(piece.Style)">
         @Html.TextBoxFor(m => m.Story.SceneList[Model.SceneCounter].TalkList[Model.TalkCounter].Pieces[Model.PieceCounter].Style, 
             new { 
-                @class = "darkback auxi", 
-                rel = ("talkStyle" + Model.TalkCounter + "_piece" + Model.PieceCounter), 
+                @class = "darkback auxi",
+                rel = ("scene" + Model.SceneCounter + "_talkStyle" + Model.TalkCounter + "_piece" + Model.PieceCounter), 
                 suggestion = "talkStyle", 
                 onfocus = "GetSuggestionBox(this)", 
                 onblur="ExitSuggestionBox(this)",
@@ -23,5 +23,5 @@
         <adder class="adderPiece" scene="@Model.SceneCounter" type="Piece" subtype="Talk" paragraph="@(Model.ParagraphCounter)" talk="@(Model.TalkCounter)" piece="@(Model.PieceCounter)" onclick="AddInputItem(this)">+</adder>
     </span>
                 
-    <div class="suggestionBox" id="talkStyle@(Model.TalkCounter)_piece@(Model.PieceCounter)"></div>
+    <div class="suggestionBox" id="scene@(Model.SceneCounter)_talkStyle@(Model.TalkCounter)_piece@(Model.PieceCounter)"></div>
 </span>
