[SITE] No more save button. Ctrl Y instead
by [handhara] in [2011-11-22 19:25:42 (-02:00)]

--- a/Presentation/Assets/css/screen_Menu.css
+++ b/Presentation/Assets/css/screen_Menu.css
@@ -13,6 +13,12 @@
 	border-radius: 0 0 10px 10px;
 }
 
+.menu #save_status
+{
+	padding: 2px;
+	border-radius: 10px 10px 0 0;
+}
+
 .menu .body 
 {
     padding: 5px;
