--- a/Presentation/Views/Shared/Partial/Menu.cshtml
+++ b/Presentation/Views/Shared/Partial/Menu.cshtml
@@ -7,6 +7,9 @@
 
     if (isAuthor)
     {
+        <div id="save_status" class="darkback">
+            Saved
+        </div>
         <div class="header lightback">
             @Html.RouteLink("Add Episode", route, new { action = "AddEpisode" })
         </div>
