[SITE] Possível ir direto a uma cena
by [Handhara Akeon (Ísis)] in [2012-03-08 19:03:38 (-03:00)]

--- a/Presentation/Assets/css/screen_Scene.css
+++ b/Presentation/Assets/css/screen_Scene.css
@@ -9,13 +9,13 @@
 }
 
 
-.SceneChanger
+.sceneChanger
 {
     padding: 0;
     text-align: center;
 }
 
-.SceneChanger li
+.sceneChanger li
 {
     border: 1px solid #000;
     display: inline-block;
@@ -24,7 +24,7 @@
     cursor: pointer;
 }
 
-.SceneChanger .chosen
+.sceneChanger .chosen
 {
     background: #000;
 }
